--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -691,4 +691,68 @@ small {
   #intro.section {
     background-position-x: 30%;
   }
+  .timeline {
+    position: relative;
+    width: 80%;
+    margin: 50px auto;
+    overflow: hidden;
+  }
+  
+  .timeline::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #3498db;
+    z-index: -1;
+  }
+  
+  .event {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: #3498db;
+    border-radius: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+  }
+  
+  .event::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 2px;
+    height: 100%;
+    background-color: #3498db;
+    transform: translateY(-50%);
+    z-index: -1;
+  }
+  
+  .event-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #3498db;
+    color: #fff;
+    border-radius: 5px;
+    display: none;
+  }
+  
+  .event:hover .event-content {
+    display: block;
+  }
+  
+  .slider-container {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  input[type="range"] {
+    width: 80%;
+    margin: 0 10%;
+  }
 }
