--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,7 +692,7 @@ small {
     background-position-x: 30%;
   }
 
-/* TIMELINE CSS */
+/* TIMELINE CSS
 * {
   box-sizing: border-box;
   outline: none !important;
@@ -736,7 +736,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
   line-height: 1.1;
   font-weight: 700;
-}
+} */
 
 /* ... Other social icon styles ... */
 .wrapper {
