--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,7 +692,8 @@ small {
     background-position-x: 30%;
   }
 
-  .timeline {
+  /* TIMELINE  */
+.timeline {
     max-width: 800px;
     margin: 50px auto;
     position: relative;
@@ -709,7 +710,7 @@ small {
     margin-bottom: 20px;
 }
 
-.timeline-item h5 {
+.timeline-item h3 {
     margin-top: 0;
     color: #3498db;
 }
@@ -722,12 +723,12 @@ small {
     content: '';
     position: absolute;
     top: 0;
-    left: -5px;
+    left: -1px; /* Adjusted this value */
     width: 10px;
     height: 10px;
     background-color: #3498db;
     border-radius: 50%;
-    border: 2px solid #fff;
+    border: 2px solid #0a0808;
 }
 
 .timeline-item:last-child {
